--- a/src/app/components/data-table/data-table.component.html
+++ b/src/app/components/data-table/data-table.component.html
@@ -1,1 +1,19 @@
-<p>data-table works!</p>
+<table>
+  <thead>
+    <tr>
+      <th colspan="3"><input type="text" placeholder="Recherche"></th>
+    </tr>
+    <tr>
+      <th>Original Title</th>
+      <th>Genre</th>
+      <th>Start Year</th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr *ngFor="let line of data">
+      <td>{{ line.originalTitle }}</td>
+      <td>{{ line.genre }}</td>
+      <td>{{ line.startYear }}</td>
+    </tr>
+  </tbody>
+</table>
