--- a/src/app/components/data-table/data-table.component.html
+++ b/src/app/components/data-table/data-table.component.html
@@ -1,7 +1,13 @@
 <table>
   <thead>
     <tr>
-      <th colspan="3"><input type="text" placeholder="Recherche"></th>
+      <th colspan="2"><input type="text" placeholder="Recherche"></th>
+      <th>
+        <select>
+          <option>Title</option>
+          <option>Year</option>
+        </select>
+      </th>
     </tr>
     <tr>
       <th>Original Title</th>
