complete the update via modal

--- a/src/app/components/data-table/data-table.component.html
+++ b/src/app/components/data-table/data-table.component.html
@@ -31,4 +31,4 @@
   </tbody>
 </table>
 
-<app-modal [editLine]="editLine" *ngIf="show" [show]="show"></app-modal>
+<app-modal [editLine]="editLine" *ngIf="modal" (hideModal)="hideModal($event)"></app-modal>
