--- a/src/app/components/data-table/data-table.component.css
+++ b/src/app/components/data-table/data-table.component.css
@@ -4,7 +4,7 @@
 }
 
 table {
-  width: 900px;
+  width: 70%;
   margin: 0px auto;
   text-align: center;
   font-family: Arial, Helvetica, sans-serif;
